--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
-    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
-    "angularfire2": "^5.0.0-rc.10",
-    "bootstrap": "^4.1.1",
+    "angularfire": "^2.3.0",
     "core-js": "^2.5.4",
     "firebase": "^5.0.3",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
+  },
+  "peerDependencies": {
+    "angular": "^1.3.0",
+    "firebase": "3.x.x"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.2",
